--- a/chamber/styles/small.css
+++ b/chamber/styles/small.css
@@ -87,12 +87,13 @@ body {
 .hamburger.active .hamburger-inner { background: transparent; }
 .hamburger.active .hamburger-inner::before { transform: rotate(45deg); top: 0; }
 .hamburger.active .hamburger-inner::after { transform: rotate(-45deg); top: 0; }
+.hamburger.active ~ .primary-nav{ display: block !important; }
 
 /* NAV */
 .primary-nav {
   display: none;
   position: absolute;
-  top: 100%;
+  top: 72px;
   left: 0;
   width: 100%;
   background: var(--accent);
@@ -110,7 +111,7 @@ body {
   text-decoration: none;
 }
 .primary-nav a:hover { background: rgba(255,255,255,0.15); }
-.primary-nav a.active { background: rgba(255,255,255,0.25); }
+.primary-nav a.active { background: rgba(255,255,255,0.25);}
 
 .main-content {
   max-width: 1100px;
