--- a/finalproject/styles/large.css
+++ b/finalproject/styles/large.css
@@ -1,5 +1,5 @@
-@media (min-width: 720px) {
-    .site-header .container {
+﻿@media (min-width: 720px) {
+    .site-header .page-container {
         display: flex;
         justify-content: space-between;
         align-items: center;
